--- a/src/styles/rendercv.css
+++ b/src/styles/rendercv.css
@@ -13,7 +13,7 @@
     padding-bottom: 25px;
     min-height: auto;
     height: 100%;
-    /* overflow: auto; */
+    overflow: auto;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 10px;
     background-color: var(--lightest);
